[project]
name = "page-one-test-suite"
version = "0.1.0"
description = "Test suite for Page One"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.0.2",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[tool.black]
line-length = 79

[tool.uv.sources]
page-one-test-suite = { workspace = true }
